--- a/TestExtensions.Tests/TestExtensions.Tests.csproj
+++ b/TestExtensions.Tests/TestExtensions.Tests.csproj
@@ -2,7 +2,6 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -10,11 +9,10 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
-        <PackageReference Include="coverlet.collector" Version="1.3.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BestMatch\BestMatch.csproj" />
+      <ProjectReference Include="..\TestExtensions\TestExtensions.csproj" />
     </ItemGroup>
 
 </Project>
