--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,8 @@ jobs:
         with:
           dotnet-version: 5.0.x
           source-url: https://nuget.pkg.github.com/leonverschuren/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - run: dotnet build --configuration Release TestExtensions
       - name: Create the package
-        run: dotnet pack --no-build --include-source --include-symbols --configuration Release TestExtensions -p:PackageVersion=${{ github.event.release.tag_name }}
+        run: dotnet pack --no-build --configuration Release TestExtensions -p:PackageVersion=${{ github.event.release.tag_name }}
       - name: Publish the package to GPR
-        run: dotnet nuget push TestExtensions/bin/Release/*.nupkg
+        run: dotnet nuget push TestExtensions/bin/Release/*.nupkg --api-key ${{secrets.GITHUB_TOKEN}}
